ce-kubernetes-multiple-apps/kubernetes/dns-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dns-test-pod
spec:
  containers:
  - name: dns-utils
    image: busybox
    command:
      - sleep
      - "3600"
