ce-kubernetes-multiple-apps/kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-bookstore-backend-service
spec:
  type: LoadBalancer
  selector:
    app: bookstore-backend-api
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5000
