ce-kubernetes-multiple-apps/kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-bookstore-frontend-service
spec:
  selector:
    app: bookstore-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: NodePort
