ce-kubernetes-multiple-apps/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-bookstore-frontend-ingress
spec:
  rules:
    - host: localhost  # Replace with your actual domain or IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-bookstore-frontend-service
                port:
                  number: 8080
